$Id: NEWS,v 1.12 1999-10-23 05:24:19 macgyver Exp $

1.2.0pre9

- New support for BSD sendfile() semantics.

- sendfile() deprecates politely on Linux 2.0.x.

- AuthPAMAuthoritative now defaults to False.  This should clear up any
  confusion on using PAM with AuthUserFile and friends.

- Removed Bandwidth from the documentation.

- Fixed a rare segfault in mod_auth.

- Logging has changed slightly to be more informative and more consistent.
    All messages that get logged are now preceded with
    <virtualhost> (remote host[remote ip]).

- mod_ldap for authentication against LDAP directories is now in place.

- ftpwho/ftpcount -- a grammatical error corrected, and they now build
    as seperate binaries.

- Fixed the 'no names, just UIDs' bug.

- Added genuser.pl to facilitate AuthUserFile entry creation.

- Umask now takes an optional second argument, specifying a directory umask.

- Work around FreeBSD's broken setpassent().

- Generate RPMs for both inetd and standalone versions of ProFTPD.

- Added AuthUsingAlias to allow for more fine-grain control of anonymous
    logins.
